--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,68 @@
-   	<!-- page header -->
+<!-- Help page by Steven Young -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- 1. Meta tags: The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<title>Operation Dinner Out</title>
+	<meta name="description" content="Capstone 2017 project">
+
+	<!-- 2. Bootstrap CSS: From CDN www.bootstrapcdn.com -->
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- 3. Favicon + my CSS: these are optional -->
+	<link rel="icon" href="../favicon.ico">
+	<!--<link href="style.css" rel="stylesheet">-->
+	<link href="../css/general.css" rel="stylesheet">
+	<link href="../css/home.css" rel="stylesheet">
+    <link href="../css/login.css" rel="stylesheet">
+	<script src="https://use.fontawesome.com/6ac119a099.js"></script>	
+	
+	<!-- 4. Old Explorer support: HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+</head>
+<!-- This section  needs to go into the css file -->
+<style><!-- This section  needs to go into the css file -->
+
+.help-header { padding-top: 60px; padding-bottom: 20px; }
+.help-qa-letter { font-size: 1.2em; font-weight: bold; color: gray; }
+.help-line { width: 90%; border-top: 1px dotted lightgray; padding-bottom: 20px; }
+.help-small-sq { border-radius: 6px; color: white; }
+.help-answer-para { margin-left: 5%; margin-right: 5%; }
+
+</style>
+
+<body>
+<nav class="navbar navbar-static-top">
+	<div class="container">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+	</div>
+	<div id="navbar" class="collapse navbar-right navbar-collapse">
+		<ul class="nav navbar-nav ">
+			<li><a href="index.html">Back to login</a></li>
+		</ul>
+	</div>		<!-- end nav-collapse -->
+</div>		<!-- end navbar -->
+</nav>
+
+<div class="container">
+	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
+
+		<!-- page header -->
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
 				<h2>Help<small> - frequently asked questions about Dinner Out</small></h2><!-- Dynamically fills in with school id -->
@@ -9,7 +73,7 @@
 				</div>
 			</div>
 		</div><!--End page header-->
-		
+
 		<!-- intro text -->
 		<div class="row content-text">
 			<p>
@@ -21,40 +85,43 @@
 			</p>
 		</div>
 
-			<!-- page content, just text -->
-			<div class="content-text">
-				<br>
-				<form class="form-horizontal" action="school1.html"></form>
-            <div class="row">
-                <br>
-               <!-- action icons, row 2 -->
+		<!-- action icons, row 2 -->
 		<div class="row action-icon-row" >
-			<div class="col-xs-2 col-xs-offset-1 text-center" title="Backup all data of Super's focus school">
+            <!-- Getting started icon-->
+			<div class="col-xs-2 col-xs-offset-1 text-center" >
 				<div class ="action-sq i-navy center-block" >
 					<a href="#getting-started"><span class="fa fa-paper-plane-o fa-4x action-icon" ></span></a>
 				</div>
 				<p><a href="#getting-started"><span class="student-icon-text">Getting started</span></a></p>
-			</div> <!-- col -->
-			<div class="col-xs-2 text-center" title="Suspend all teacher logins of Super's focus school">
+			</div> <!--End Getting started icon-->
+            
+			<div class="col-xs-2 text-center" >
+                <!-- Sessions icon-->
 				<div class ="action-sq i-red center-block">
 					<a href="#sessions"><span class="fa fa-key fa-4x action-icon"></span></a>
 				</div>
 				<p><a href="#sessions"><span class="student-icon-text">Sessions</span></a></p>
-			</div><!-- col -->
-			<div class="col-xs-2 text-center" title="Restore all teacher logins of Super's focus school">
+			</div><!--End Sessions icon-->
+            
+            <!-- Admin poweres icon-->
+			<div class="col-xs-2 text-center" >
 				<div class ="action-sq i-yellow center-block">
 					<a href="#admin-powers"><span class="fa fa-trophy fa-4x action-icon"></span></a>
 				</div>
 				<p><a href="#admin-powers"><span class="student-icon-text">Admin powers</span></a></p>
-			</div><!-- col -->
-			<div class="col-xs-2 text-center" title="Restore all teacher logins of Super's focus school">
+			</div><!-- End Admin poweres icon-->
+            
+            <!-- Ect icon-->
+			<div class="col-xs-2 text-center">
 				<div class ="action-sq i-ltblue center-block">
 					<a href="#etc"><span class="fa fa-shower fa-4x action-icon"></span></a>
 				</div>
 				<p><a href="#etc"><span class="student-icon-text">Etc</span></a></p>
-			</div><!-- col -->
-		</div><!-- row -->                        <!--Blank rows to ad space to page -->
-               <!-- page content, just text -->
+			</div><!--End Ect icon-->
+		</div><!-- row -->
+
+		<!-- page content, just text -->
+        <!-- Getting started questions -->
 		<div class="row content-text">
 			<a name="getting-started"></a>
 			<h3 class="help-header">Getting Started &nbsp; <span class="fa fa-paper-plane-o fa-fw fa-1x i-navy help-small-sq" ></span> </h3>
@@ -70,14 +137,21 @@
 			<hr class="help-line">
 			
 			<p>
-				<span class="help-qa-letter">Q2:</span> What is another question?
+				<span class="help-qa-letter">Q2:</span> My student behavior squares are not there.
 			</p>
 			<p class="help-answer-para">
-				<span class="help-qa-letter">A:</span> Another question is a placeholder until Prof Bill gets his act together. (ha)
+				<span class="help-qa-letter">A:</span> You must talk to the admin to add a square to the session.
 			</p>
-			
+            <hr class="help-line">
+            <p>
+				<span class="help-qa-letter">Q3:</span> I started a session with the wrong student.
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span> Click the dinner out logo and pick a different student
+			</p>
+			<!-- end getting started questions -->
 			<hr class="help-line">
-
+            <!-- Sessions questions -->
 			<a name="sessions"></a>
 			<h3 class="help-header">Sessions &nbsp;  <span class="fa fa-key fa-fw fa-1x i-red help-small-sq" ></span></h1>
 			<p>
@@ -87,11 +161,11 @@
 				<span class="help-qa-letter">A:</span> We shall see. It does make help at least <i>a little</i> more fun.<br>
 				The last question is always: how do I get more help? And the answer is my email.
 			</p>
-			
+			<!-- end sessions questions -->
 			<hr class="help-line">
-			
-				<a name="admin-powers"></a>
-			<h3 class="help-header">Admin Powers &nbsp;  <span class="fa fa-trophy fa-fw fa-1x i-yellow center-block-small-sq" ></span></h1>
+            <!-- Admin powers questions-->
+            <a name="admin-powers"></a>
+			<h3 class="help-header">Admin Powers &nbsp;  <span class="fa fa-trophy fa-fw fa-1x i-yellow help-small-sq" ></span></h1>
 			<p>
 				<span class="help-qa-letter">Q3:</span> Are these question numbers working? Is 20 questions too goofy?
 			</p>
@@ -99,7 +173,20 @@
 				<span class="help-qa-letter">A:</span> We shall see. It does make help at least <i>a little</i> more fun.<br>
 				The last question is always: how do I get more help? And the answer is my email.
 			</p>
-			
+			<!--End Admin powers questions-->
+			<hr class="help-line">
+            
+            <!-- Ect questions-->
+            <a name="etc"></a>
+			<h3 class="help-header">Ect &nbsp;  <span class="fa fa-shower fa-fw fa-1x i-ltblue help-small-sq" ></span></h1>
+			<p>
+				<span class="help-qa-letter">Q3:</span> Are these question numbers working? Is 20 questions too goofy?
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span> We shall see. It does make help at least <i>a little</i> more fun.<br>
+				The last question is always: how do I get more help? And the answer is my email.
+			</p>
+			<!--End Ect questions-->
 			<hr class="help-line">
 
 			<!-- bottom padding for demo only -->
@@ -108,11 +195,19 @@
 		</div>   <!-- row -->
 
 	</div><!--End content col-->
-            <br>
-            <br>
-            <br>
-            <br>
-            <div class="col-lg-6"></div>
-        </div>
+</div><!--End container-->
+
+
+<!-- 5. Jquery: jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<!-- 6. Bootstrap Javascript: Include all compiled plugins (below), or include individual files as needed -->
+<!-- Got this from CDN: https://www.bootstrapcdn.com/ -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+</body>
+</html>
+
+
 
    
