--- a/app/views/schools/super.html.erb
+++ b/app/views/schools/super.html.erb
@@ -14,61 +14,63 @@
 			</div>
 		</div><!--End page header-->
 
-
 		<!-- school focus spinner -->
 		<div class="row first-content-row">
 		 <%= render 'schoolSelect', school: @school %>
-
 		</div>
 
 		<!-- action icons -->
-		<div class="row action-icon-row" style="margin-top: 40px;">
-			
-			<div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit schools">
+		<div class="row" style="margin-top: 40px;">
 			<%= link_to schools_path(@schools) do %>	
-				<div class ="action-sq i-navy center-block">
-				<span class="fa fa-home fa-4x action-icon" ></span>
-				</div>
-				<p><span class="student-icon-text">All schools</span></p>
-				<% end %>
-			</div> <!-- col -->
+			<div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit schools">
+			<div class ="action-sq i-navy center-block">
+			<span class="fa fa-home fa-4x action-icon" ></span>
+			</div>
+			<p><span class="student-icon-text">All schools</span></p>
 			
-			<div class="col-xs-2 text-center" title="Stats++ for the Super User">
+			</div> <!-- col -->
+			<% end %>
+			
 			<%= link_to super_report_path(@schools) do %>
-				<div class ="action-sq i-pink center-block">
-					<span class="fa fa-file-text fa-4x action-icon"></span>
-				</div>
-				<p><span class="student-icon-text">Super Report</span></p>
-				<% end %>
+			<div class="col-xs-2 text-center" title="Stats++ for the Super User">
+			<div class ="action-sq i-pink center-block">
+				<span class="fa fa-file-text fa-4x action-icon"></span>
+			</div>
+			<p><span class="student-icon-text">Super Report</span></p>
 			</div><!-- col -->
+			<% end %>
 		</div><!-- row -->
 
 		<!-- action icons, row 2 -->
 		<div class="row action-icon-row" style="margin-top: 40px;">
+			
+			<%= link_to backup_path(@schools) do %>
 			<div class="col-xs-2 col-xs-offset-1 text-center" title="Backup all data of Super's focus school">
-				<%= link_to backup_path(@schools) do %>
-				<div class ="action-sq i-green center-block" >
-					<span class="fa fa-floppy-o fa-4x action-icon" ></span>
-				</div>
-				<p><span class="student-icon-text">Backup school</span></p>
-				<% end %>
+			<div class ="action-sq i-green center-block" >
+				<span class="fa fa-floppy-o fa-4x action-icon" ></span>
+			</div>
+			<p><span class="student-icon-text">Backup school</span></p>
 			</div> <!-- col -->
+			<% end %>
+		
+			<%= link_to suspend_path(@schools) do %>
 			<div class="col-xs-2 text-center" title="Suspend all teacher logins of Super's focus school">
-				<%= link_to suspend_path(@schools) do %>
-				<div class ="action-sq i-red center-block">
-					<span class="fa fa-bomb fa-4x action-icon"></span>
-				</div>
-				<p><span class="student-icon-text">Suspend school</span></p>
-				<% end %>
+			<div class ="action-sq i-red center-block">
+				<span class="fa fa-bomb fa-4x action-icon"></span>
+			</div>
+			<p><span class="student-icon-text">Suspend school</span></p>
 			</div><!-- col -->
+			<% end %>
+			
+			<%= link_to restore_path(@schools) do %>
 			<div class="col-xs-2 text-center" title="Restore all teacher logins of Super's focus school">
-				<%= link_to restore_path(@schools) do %>
-				<div class ="action-sq i-yellow center-block">
-					<span class="fa fa-undo fa-4x action-icon"></span>
-				</div>
-				<p><span class="student-icon-text">Restore school</span></p>
-				<% end %>
+			<div class ="action-sq i-yellow center-block">
+				<span class="fa fa-undo fa-4x action-icon"></span>
+			</div>
+			<p><span class="student-icon-text">Restore school</span></p>
 			</div><!-- col -->
+			<% end %>
+			
 		</div><!-- row -->
 
 	</div><!--End content col-->
