--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,54 +1,8 @@
 <!-- Help page by Steven Young -->
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-
-<!--	<meta charset="utf-8">-->
-<!--	<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-<!--	<meta name="viewport" content="width=device-width, initial-scale=1">-->
-
-	<!-- 1. Meta tags: The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<!--	<title>Operation Dinner Out</title>-->
-<!--	<meta name="description" content="Capstone 2017 project">-->
-
-	<!-- 2. Bootstrap CSS: From CDN www.bootstrapcdn.com -->
-<!--	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
-
-	<!-- 3. Favicon + my CSS: these are optional -->
-<!--	<link rel="icon" href="../favicon.ico">-->
-	<!--<link href="style.css" rel="stylesheet">-->
-<!--	<link href="../css/general.css" rel="stylesheet">-->
-<!--	<link href="../css/home.css" rel="stylesheet">-->
-<!--    <link href="../css/login.css" rel="stylesheet">-->
-<!--	<script src="https://use.fontawesome.com/6ac119a099.js"></script>	-->
-	
-	<!-- 4. Old Explorer support: HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-<!--		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>-->
-<!--		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>--> 
-<!--	<![endif]-->
-<!--</head>-->
-<!-- This section  needs to go into the css file -->
-<!--<style><!-- This section  needs to go into the css file -->
-
-<!--.help-header { padding-top: 60px; padding-bottom: 20px; }-->
-<!--.help-qa-letter { font-size: 1.2em; font-weight: bold; color: gray; }-->
-<!--.help-line { width: 90%; border-top: 1px dotted lightgray; padding-bottom: 20px; }-->
-<!--.help-small-sq { border-radius: 6px; color: white; }-->
-<!--.help-answer-para { margin-left: 5%; margin-right: 5%; }-->
-
-<!--</style>-->
-
-<!--<body>-->
-
-<!--<div class="container">-->
-<!--	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">-->
-
 		<!-- page header -->
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
-				<h2>Help<small> - frequently asked questions about Dinner Out</small></h2><!-- Dynamically fills in with school id -->
+				<h2>Help<small> - frequently asked questions about GeoGem</small></h2><!-- Dynamically fills in with school id -->
 			</div>
 			<div class="col-xs-1 center-block">
 				<div class="header-sq i-gray" title="Help page">
@@ -61,7 +15,7 @@
 		<div class="row content-text">
 			<p>
 				<br>
-				Here are the answers to 20 questions (frequently asked) about Dinner Out. 
+				Here are the answers to 20 questions (frequently asked) about GeoGem. 
 			</p>
 			<p>
 				Select a section icon or just scroll down for help.
@@ -109,10 +63,10 @@
 			<a name="getting-started"></a>
 			<h3 class="help-header">Getting Started &nbsp; <span class="fa fa-paper-plane-o fa-fw fa-1x i-navy help-small-sq" ></span> </h3>
 			<p>
-				<span class="help-qa-letter">Q1:</span> What is Dinner Out?
+				<span class="help-qa-letter">Q1:</span> What is GeoGem?
 			</p>
 			<p class="help-answer-para">
-				<span class="help-qa-letter">A:</span> Dinner out is a web application that collects and analyzes behavioral data for students with autism.<br>
+				<span class="help-qa-letter">A:</span> GeoGem is a web application that collects and analyzes behavioral data for students with autism.<br>
 				The program was created by computer science students at <a href="http://www.noctrl.edu">North Central College</a>. 
 				You can read more at the <%= link_to "About", about1_path %>.
 			</p>
@@ -130,7 +84,7 @@
 				<span class="help-qa-letter">Q3:</span> I started a session with the wrong student.
 			</p>
 			<p class="help-answer-para">
-				<span class="help-qa-letter">A:</span> Click the dinner out logo and pick a different student
+				<span class="help-qa-letter">A:</span> Click the GeoGem logo and pick a different student
 			</p>
 			<!-- end getting started questions -->
 			<hr class="help-line">
