--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -68,7 +68,7 @@
 			<p class="help-answer-para">
 				<span class="help-qa-letter">A:</span> GeoGem is a web application that collects and analyzes behavioral data for students with autism.<br>
 				The program was created by computer science students at <a href="http://www.noctrl.edu">North Central College</a>. 
-				You can read more at the <%= link_to "About", about1_path %>.
+				You can read more at the <%= link_to "About", about_path %>.
 			</p>
 			
 			<hr class="help-line">
