--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -18,8 +18,8 @@
 				<h2>About<small> - meet the GeoGem team</small></h2>
 			</div>
 			<div class="col-xs-1 center-block">
-				<div class="header-sq i-gray" title="All about GeoGem">
-					<span class="fa fa-info fa-3x teacher-icon"></span>
+				<div class="header-sq i-ltblue" title="All about GeoGem">
+					<span class="fa fa-info-circle fa-3x teacher-icon"></span>
 				</div>
 			</div>
 		</div><!--End page header-->
@@ -38,7 +38,7 @@
 		</div>
 		<div class="row content-text">
 			<div class="col-xs-12">
-				<h3>Contributions</h3>
+				<h3>Acknowledgements</h3>
 				<p>
 					<!--Part 2: Thank you Turning Pointe and others. -->
 					We would like to extend our thanks to <a href="http://www.turningpointeautismfoundation.org/" target="_blank">Turning Pointe Autism Foundation</a> for providing their expertise and willingness to help
@@ -62,8 +62,8 @@
 			<div class="col-xs-4 col-sm-3">
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
 						data-name="Alex P." data-text="..." 
-						data-img="<%=asset_path("avatar.png") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+						data-img="<%=asset_path("alexp.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("alexp.jpg") %>);"></div>
 					<h5>Alex P.</h5>
 				</div>
 			</div><!-- End Col-->
@@ -89,9 +89,11 @@
 			<!---- Dakota B. ---->
 			<div class="col-xs-4 col-sm-3">
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
-						data-name="Dakota B." data-text="..." 
-						data-img="<%=asset_path("avatar.png") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+						data-name="Dakota B." data-text="My role in capstone was spent developing the administrator pages. 
+						I had fun working with old friends and new, and developing from the shadows to 
+						make the secret pages which many users will never see. Perhaps in exchange for snacks, I could share these secrets..." 
+						data-img="<%=asset_path("dakotab.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("dakotab.jpg") %>);"></div>
 					<h5>Dakota B.</h5>
 				</div>
 			</div><!-- End Col-->
@@ -128,9 +130,11 @@
 			<!---- Matthew O. ---->
 			<div class="col-xs-4 col-sm-3">
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
-						data-name="Matthew O." data-text="..." 
-						data-img="<%=asset_path("avatar.png") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+						data-name="Matthew O." data-text="I had a great experience in capstone. 
+						Working on the sessions gave me a unique opportunity to further strengthen 
+						both my front-end and back-end development skills. I'm excited to see the potential impact GeoGem will have." 
+						data-img="<%=asset_path("matthewo.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("matthewo.jpg") %>);"></div>
 					<h5>Matthew O.</h5>
 				</div>
 			</div><!-- End Col-->
@@ -157,9 +161,12 @@
 			<!---- Nate V. ---->
 			<div class="col-xs-4 col-sm-3">
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
-						data-name="Nate V." data-text="..." 
-						data-img="<%=asset_path("avatar.png") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+						data-name="Nate V." data-text="Nate Vogel is a 4th year student that enjoys 
+						spending his time with computers, music, and traveling, and possesses a borderline 
+						unhealthy obsession with sneaker collecting. Nate worked on the report capability for the project, 
+						where he and his team provided the pdf and csv output functionality." 
+						data-img="<%=asset_path("natev.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("natev.jpg") %>);"></div>
 					<h5>Nate V.</h5>
 				</div>
 			</div><!-- End Col-->
@@ -188,9 +195,11 @@
 			<!---- Rolando M. ---->
 			<div class="col-xs-4 col-sm-3">
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
-						data-name="Rolando M." data-text="..." 
-						data-img="<%=asset_path("avatar.png") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+						data-name="Rolando M." data-text="I'm extremely grateful that I had the opportunity to 
+						work with an amazing team. The team worked extremely hard over the last few weeks to build 
+						something we hope you guys love." 
+						data-img="<%=asset_path("rolandom.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("rolandom.jpg") %>);"></div>
 					<h5>Rolando M.</h5>
 				</div>
 			</div><!-- End Col-->
