--- a/app/views/teachers/login_settings.html.erb
+++ b/app/views/teachers/login_settings.html.erb
@@ -25,7 +25,7 @@
 	 	<div class="row form-row">
 			<div class="col-xs-2 col-xs-offset-1"><h4> Teacher ID: </h4></div>
 			<div class="col-xs-2">
-				<%= f.text_field :user_name, class: 'form-control', id: 'teacherID' %>
+				<%= f.text_field :user_name, class: 'form-control', id: 'teacherID', :readonly => true %>
 			</div>
 		</div>
 	
@@ -33,7 +33,7 @@
 		<div class="row form-row">
    		<div class="col-xs-1 col-xs-offset-1"><h4>Name: </h4></div>
    			<div class="col-xs-4 col-xs-offset-1">
-				<%= f.text_field :full_name, class: 'form-control', id: 'teacherID' %>
+				<%= f.text_field :full_name, class: 'form-control', id: 'teacherID', :readonly => true %>
 			</div>
 		</div>   <!-- row -->
 
@@ -54,9 +54,9 @@
 		<!-- Teacher login suspended? -->
 		<div class="row form-row">
 			<div class="col-xs-2 col-xs-offset-1"><h4>Login status: </h4></div>
-			<div class="col-xs-4 checkbox">
+			<div class="checkbox">
 				<%= f.label :suspended do %>
-  					<%= f.check_box :suspended, {:class => "col-xs-4 checkbox"}, "true", "false" %>
+  					<%= f.check_box :suspended, {}, "true", "false" %>
   					Suspended
 				<% end %>
 			</div>
