--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -624,3 +624,21 @@ input[type="radio"]:checked + label {
 	height: 20%;
 	width: 70%;
 }
+
+/* Styling for form errors that display at the top of forms
+when submitted with errors */
+// Author Michael Loptien
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
