--- a/app/views/squares/_form.html.erb
+++ b/app/views/squares/_form.html.erb
@@ -5,8 +5,9 @@
 <%= form_for(square) do |f| %>
   <% if square.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(square.errors.count, "error") %> prohibited this square from being saved:</h2>
-
+      <div class="alert alert-danger">
+        The Form Contains <%= pluralize(square.errors.count, "error") %>
+      </div>
       <ul>
       <% square.errors.full_messages.each do |message| %>
         <li><%= message %></li>
