--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -5,8 +5,9 @@
 <%= form_for(student) do |f| %>
   <% if student.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(student.errors.count, "error") %> prohibited this student from being saved:</h2>
-
+      <div class="alert alert-danger">
+       The Form Contains <%= pluralize(student.errors.count, "error") %>
+      </div>
       <ul>
       <% student.errors.full_messages.each do |message| %>
         <li><%= message %></li>
