--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -16,7 +16,7 @@
   <div class="row form-row">
     <div class="col-xs-2 col-xs-offset-1"><h4> School ID: </h4></div>
     <div class="col-xs-2">
-      <%= f.text_field :screen_name, class: "form-control" %>	
+      <%= f.text_field :screen_name, class: "form-control", :readonly => true %>	
     </div>
   </div>
 	
@@ -24,7 +24,7 @@
   <div class="row form-row">
     <div class="col-xs-1 col-xs-offset-1"><h4>School Name: </h4></div>
     <div class="col-xs-4 col-xs-offset-1">
-      <%= f.text_field :full_name, class: "form-control"  %>    				
+      <%= f.text_field :full_name, class: "form-control", :readonly => true  %>    				
     </div>
   </div>
 
