--- a/app/views/schools/suspend.html.erb
+++ b/app/views/schools/suspend.html.erb
@@ -1,4 +1,5 @@
 <!-- UX Team. Edited by Robert Herrera and Dakota B -->
+<%= form_for :@activeTeachers do |t| %>
 <div class="container">
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 
@@ -27,8 +28,15 @@
 				<!-- Action buttons -->
 				<div class="row action-buttons-row">
 					<div class="col-xs-4 col-xs-offset-1 text-center"> 
-						<button type="submit" class="btn btn-success">Suspend school</button>
+
+
+								<%= t.hidden_field :suspended, :value=>true, class: 'form-control' %>
+								<%= button_tag(type: 'submit', class: "btn btn-success") do %>  
+		  						Suspend School
+		  					<% end %>
+
 						&nbsp; &nbsp; &nbsp;
 						<button type="submit" class="btn btn-danger">Cancel</button></div>
 				</div>
 			</form>
+<% end %>
