--- a/app/views/students/analysis.html.erb
+++ b/app/views/students/analysis.html.erb
@@ -17,7 +17,7 @@
                 <div class="form-group"> 
                         <div class="row">
                             <div class = "col-xs-2">
-                				<a href="teachers/analysis2">
+                				<a href="analysis2">
         	                        <div class="col-xs-2 col-xs-offset-1 text-center" title="Analysis">
         	                            <div class ="action-sq i-navy center-block" >
         		                            <span class="fa fa-file-text-o fa-4x action-icon" ></span>
@@ -34,7 +34,7 @@
                         <br>
                         <div class="row">
                             <div class = "col-xs-2">
-                				<a href="teachers/analysis3">
+                				<a href="analysis3">
         	                        <div class="col-xs-2 col-xs-offset-1 text-center" title="Analysis">
         	                            <div class ="action-sq i-red center-block" >
         		                            <span class="fa fa-bar-chart fa-4x action-icon" ></span>
@@ -51,7 +51,7 @@
             			<br>
             			<div class="row">
                             <div class = "col-xs-2">
-                				<a href="teachers/analysis2">
+                				<a href="analysis4">
         	                        <div class="col-xs-2 col-xs-offset-1 text-center" title="Analysis">
         	                            <div class ="action-sq i-yellow center-block" >
         		                            <span class="fa fa-file-excel-o fa-4x action-icon" ></span>
